...
                      client.signIn,
                      ScaffoldMessenger.of(context),
                      Navigator.of(context),
                      client,
                    ),
                    icon: const Icon(Icons.login),
                    label: const Text('Sign in'),
                  ),
                  OutlinedButton.icon(
                    onPressed: () => _handleSign(
                      client.signUp,
                      ScaffoldMessenger.of(context),
                      Navigator.of(context),
                      client,
                    ),
                    icon: const Icon(Icons.login),
                    label: const Text('Sign up'),
                  ),
                ],
              )
            ],
          ),
        ),
...
